fixed some scrolling issues on safari/firefox

--- a/web/public/css/darkvision.css
+++ b/web/public/css/darkvision.css
@@ -99,10 +99,7 @@ md-icon {
   **/
 
 .wrapper {
-  overflow-y: scroll;
-}
-
-.container {
+  overflow: hidden;
 }
 
 /**
