--- a/web/public/routes/home/home.css
+++ b/web/public/routes/home/home.css
@@ -2,6 +2,7 @@
   padding: 40px;
   max-width: 1440px;
   margin: 0 auto;
+  overflow-y: scroll;
 }
 
 .button-group {
