--- a/web/public/routes/video/video.css
+++ b/web/public/routes/video/video.css
@@ -159,7 +159,7 @@
 }
 
 .video-frames {
-  overflow: auto;
+  overflow-y: scroll;
   padding-bottom: 20px;
 }
 
